<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="pair_phone_number"
        android:title="@string/preferences_title_pair_phone_number"
        android:summary="@string/preferences_summary_pair_phone_number"
        android:dialogTitle="@string/preferences_dialog_title_pair_phone_number"
        android:inputType="phone" />

    <EditTextPreference
        android:key="sms_password"
        android:title="@string/preferences_title_sms_password"
        android:summary="@string/preferences_summary_sms_password"
        android:dialogTitle="@string/preferences_dialog_title_sms_password"
        android:defaultValue="12345" />

    <Preference
        android:key="about"
        android:title="@string/preferences_title_about" />

    <Preference
        android:key="privacy"
        android:title="@string/preferences_title_privacy" />

</PreferenceScreen>